--- a/web/wp-content/themes/wgcacsc/assets/scss/templates/_front.scss
+++ b/web/wp-content/themes/wgcacsc/assets/scss/templates/_front.scss
@@ -178,6 +178,10 @@
           max-width: rem-calc(300);
           width: auto;
         }
+        p {
+          width: 100%;
+          padding: 0 rem-calc(40);
+        }
       }
     }
   }
